--- a/style.css
+++ b/style.css
@@ -1,17 +1,21 @@
-.body {
-    margin: 0;
-}
-
-.canvas-style {
-    border: 1px solid;
-    width:100%;
-}
-
-
-.start_btn {
-    margin-bottom: 2rem;
-}
-
-.options {
-    margin: 2rem 0;
-}
+.asset {
+    width: 7rem;
+  }
+  .navbar {
+    background-color: black;
+  }
+  
+  .container {
+    padding: 2rem;
+  }
+  .blue {
+    font-weight: 700;
+    color: #007bff;
+  }
+  
+  .settings {
+    margin-top: 2rem;
+  }
+  label {
+    font-weight: 500;
+  }
